Fixed Scrollbar Issue

--- a/src/app/components/document/document.component.scss
+++ b/src/app/components/document/document.component.scss
@@ -4,33 +4,43 @@ main {
 	justify-content: center;
 	align-items: center;
 	height: 100%;
+	max-height: calc(100dvh - 70px);
+	overflow: hidden;
 
-	padding-bottom: 4rem;
+	.player-container {
+		width: 100%;
+		max-width: 800px;
+		/* Adjust this value as needed */
+		margin: 0 auto;
+	}
 
 	.player {
-		width: 100%;
-		max-width: 1120px;
-		min-width: 320px;
 		position: relative;
+		width: 100%;
+		padding-top: 56.25%;
+		/* 16:9 aspect ratio */
 		margin: 2rem;
 
 		video {
+			position: absolute;
+			top: 0;
+			left: 0;
 			width: 100%;
-			height: auto;
-			border: 1px solid #1a1a1a;
-			border-radius: 1rem;
+			height: 100%;
+			object-fit: cover;
+			border-radius: 8px;
 		}
 
 		.toolbar {
-			width: 100%;
-			opacity: 1;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			gap: 1rem;
 			position: absolute;
 			bottom: 0;
-			padding: 1rem;
+			left: 0;
+			right: 0;
+			padding: 10px;
+			background-color: rgba(0, 0, 0, 0.5);
+			display: flex;
+			align-items: center;
+			gap: 1rem;
 
 			button {
 				width: 36px;
@@ -57,6 +67,8 @@ main {
 			}
 
 			.player-timeline {
+				flex-grow: 1;
+				margin: 0 10px;
 				width: 100%;
 				height: 32px;
 
